--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .header {
 	height: 55px;
-	width: 1360px;
+	max-width: 1360px;
+	width: 100%;
 	position: fixed;
 	z-index: 1;
 	top: 0;
@@ -45,7 +46,8 @@
 	margin-top: 55px;
 	margin-right:  auto;
 	margin-left:  auto;
-	width: 1360px;
+	max-width: 1360px;
+	width: 100%;
 	height: 700px;
 }
 
@@ -69,7 +71,8 @@ h5 { font-size: 20px;
 /*section 1 end*/
 /*section 2 start*/
 .section2 {
-	width: 1360px;
+	max-width: 1360px;
+	width: 100%;
 	height: 850px;
 	margin: 0 auto;
 	display: flex;
@@ -78,13 +81,15 @@ h5 { font-size: 20px;
 }
 .section2-container {
 	margin: 0 auto;
-	width: 1170px;
+	max-width: 1170px;
+	width: 100%;
 	height: 700px;
 	background-color: white;
 	display: flex;
 }
 .container-about {
-	width: 240px;
+	max-width: 240px;
+	width: 100%;
 	height: 240px;
 	border: 1px solid black;
 	border-radius: 10px;
